--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,30 @@
     android:padding="20dp">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/enter_text_to_speak"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@id/til"
-        android:layout_marginBottom="10dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginVertical="10dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSpeak"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginVertical="10dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tilText"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:inputType="textMultiLine|textImeMultiLine" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -38,12 +40,12 @@
         android:id="@+id/btnSpeak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="@string/speak"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@+id/til"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginVertical="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
