--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
             android:id="@+id/tilText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="start"
             android:inputType="textMultiLine|textImeMultiLine" />
 
     </com.google.android.material.textfield.TextInputLayout>
